<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".homeScreen.searchFragment.SearchFragment"
    android:background="@color/main_bg">

    <EditText
        android:id="@+id/searchET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/edit_text_selector"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/search_your_tasks"
        android:padding="15dp"
        android:textColor="@color/hint_color"
        app:layout_constraintTop_toTopOf="parent"
        android:textColorHint="@color/hint_color"
        android:drawableEnd="@drawable/ic_search_selected"/>

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_searches"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/searchET"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/editTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textColor="@color/purple"
        android:textSize="18sp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/searchET"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchResultRV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        tools:listitem="@layout/item_search"
        app:layout_constraintTop_toBottomOf="@id/titleTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>