<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    tools:context=".feature.setting.SettingFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/profileCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/setting_card_color"
        android:shadowColor="@color/black"
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="15dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <View
                android:id="@+id/profileBGV"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/corner_box"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profileIV"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/main_screen_img"
                app:layout_constraintBottom_toBottomOf="@id/profileBGV"
                app:layout_constraintEnd_toEndOf="@id/profileBGV"
                app:layout_constraintStart_toStartOf="@id/profileBGV"
                app:layout_constraintTop_toTopOf="@id/profileBGV" />

            <TextView
                android:id="@+id/userNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/userRoleTV"
                app:layout_constraintStart_toEndOf="@id/profileBGV"
                app:layout_constraintTop_toTopOf="@id/profileBGV"
                app:layout_constraintVertical_chainStyle="packed"
                android:text="Jhon Fernandez" />

            <TextView
                android:id="@+id/userRoleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/hint_color"
                app:layout_constraintBottom_toBottomOf="@id/profileBGV"
                app:layout_constraintStart_toEndOf="@id/profileBGV"
                app:layout_constraintTop_toBottomOf="@id/userNameTV"
                app:layout_constraintVertical_chainStyle="packed"
                android:text="Designer" />

            <ImageView
                android:id="@+id/backIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="@id/profileBGV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/profileBGV" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/settingCV1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/setting_card_color"
        android:shadowColor="@color/black"
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="15dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/languageTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textColor="@color/hint_color"
                android:textSize="17sp"
                app:drawableEndCompat="@drawable/ic_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                android:id="@+id/languageDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@id/languageTV" />

            <TextView
                android:id="@+id/soundReminderTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="@string/reminder_sound"
                android:textColor="@color/hint_color"
                android:textSize="17sp"
                app:drawableEndCompat="@drawable/ic_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/languageDivider" />

            <View
                android:id="@+id/soundReminderDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@id/soundReminderTV" />

            <TextView
                android:id="@+id/soundTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="@string/sound"
                android:textColor="@color/hint_color"
                android:textSize="17sp"
                app:drawableEndCompat="@drawable/ic_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/soundReminderDivider" />

            <View
                android:id="@+id/soundDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@id/soundTV" />

            <TextView
                android:id="@+id/permissionTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="@string/permission"
                android:textColor="@color/hint_color"
                android:textSize="17sp"
                app:drawableEndCompat="@drawable/ic_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/soundDivider" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/settingCV2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/setting_card_color"
        android:shadowColor="@color/black"
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:id="@+id/supportTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support"
                android:textColor="@color/hint_color"
                android:textSize="17sp"
                app:drawableEndCompat="@drawable/ic_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                android:id="@+id/supportDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@id/supportTV" />

            <TextView
                android:id="@+id/termsUseTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="@string/terms_of_use"
                android:textColor="@color/hint_color"
                android:textSize="17sp"
                app:drawableEndCompat="@drawable/ic_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/supportDivider" />

            <View
                android:id="@+id/termsUseDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@id/termsUseTV" />

            <TextView
                android:id="@+id/logOutTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="@string/logout"
                android:textColor="@color/hint_color"
                android:textSize="17sp"
                app:drawableEndCompat="@drawable/ic_logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/termsUseDivider" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
</layout>