<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileActivity"
    android:background="@color/main_bg">

    <ImageView
        android:id="@+id/backIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_back_button"/>

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/backIV"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/profileBGV"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/backIV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/corner_box"/>

    <ImageView
        android:id="@+id/profileIV"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:src="@drawable/main_screen_img"
        app:layout_constraintTop_toTopOf="@id/profileBGV"
        app:layout_constraintStart_toStartOf="@id/profileBGV"
        app:layout_constraintEnd_toEndOf="@id/profileBGV"
        app:layout_constraintBottom_toBottomOf="@id/profileBGV"/>

    <ImageView
        android:id="@+id/camIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_cam"
        android:layout_marginBottom="-17dp"
        android:layout_marginEnd="-18dp"
        app:layout_constraintEnd_toEndOf="@id/profileIV"
        app:layout_constraintBottom_toBottomOf="@id/profileIV"/>

    <EditText
        android:id="@+id/userNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/edit_text_selector"
        android:fontFamily="@font/poppins_regular"
        android:hint="User Name"
        android:padding="15dp"
        android:textColor="@color/hint_color"
        android:textColorHint="@color/hint_color"
        app:layout_constraintTop_toBottomOf="@id/camIV" />

    <EditText
        android:id="@+id/roleET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/edit_text_selector"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/profession"
        android:padding="15dp"
        android:textColor="@color/hint_color"
        android:textColorHint="@color/hint_color"
        app:layout_constraintTop_toBottomOf="@id/userNameET" />

    <View
        android:id="@+id/checkView1"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_margin="15dp"
        android:background="@drawable/edit_text_selector"
        app:layout_constraintEnd_toStartOf="@id/genderGuide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roleET"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/maleCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:text="Male"
        android:textColor="@color/hint_color"
        android:textColorHint="@color/hint_color"
        app:layout_constraintTop_toTopOf="@id/checkView1"
        app:layout_constraintStart_toStartOf="@id/checkView1"
        app:layout_constraintBottom_toBottomOf="@id/checkView1"/>

    <View
        android:id="@+id/checkView2"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_margin="15dp"
        android:background="@drawable/edit_text_selector"
        app:layout_constraintStart_toEndOf="@id/genderGuide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roleET"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/femaleCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:text="Female"
        android:textColor="@color/hint_color"
        android:textColorHint="@color/hint_color"
        app:layout_constraintTop_toTopOf="@id/checkView2"
        app:layout_constraintStart_toStartOf="@id/checkView2"
        app:layout_constraintBottom_toBottomOf="@id/checkView2"/>

    <EditText
        android:id="@+id/desET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/edit_text_selector"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/description"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="80dp"
        android:textColor="@color/hint_color"
        android:textColorHint="@color/hint_color"
        app:layout_constraintTop_toBottomOf="@id/maleCheckBox" />

    <TextView
        android:id="@+id/createTaskBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/ic_task_detail_bg"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/save_changes"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/genderGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>